--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
  
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
+  <h1>Bine ai venit</h1>
+  <p>probabil asa se va accesa baza de date(doar ca sub forma de ACCPI.github.io),ca sa vedem cum decurge treaba si ii pe moca sau putem schimba pe un domeniu ca sa aveti numele my shiny tiny(ACCPI.ceva).</p>
+  <p>sau sub forma de aplicatie da acolo trebe executabil si nush daca stie toata lumea sa il descarce asa ca eu recomand sa lasam asa(ca sa dam accesu sa bage altii datele sa aibe ei firele de par carunt)<p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
